# Stock_AI_Platform

./: .env.example  .gitignore  CLAUDE.md  M04_PROVIDER_INTERFACE_SPEC.md  M10_MUTATION_DETECTOR_SPEC.md  PS code.txt  README.md  TO-DO LIST.docx  _260623_FDX_pullback.txt  _diag_fdx.py  _gen_fdx_report.py  check_regime_symbols.py  diagnostics_2026-06-26.json  diagnostics_2026-06-29.json  export_ticker_metadata.py  funnel_2026-06-11.json  funnel_2026-06-18.json  funnel_2026-06-26.json  funnel_2026-07-02.json  funnel_2026-07-08.json  funnel_stage1_check.json  pyproject.toml  requirements.txt  ☆ PS code.txt
.claude/: agents.md  claude.json
.pytest_tmp_scratch/: m18out.txt  out.txt  (+6 more)
Deliverables/Deliverables R1_260610/Current_Stable_Codebase/: .gitignore  pyproject.toml
Deliverables/Deliverables R1_260610/Current_Stable_Codebase/app/database/: __init__.py  schema_manager.py
Deliverables/Deliverables R1_260610/Current_Stable_Codebase/app/services/ai_review/: __init__.py
Deliverables/Deliverables R1_260610/Current_Stable_Codebase/app/services/pipeline/: pipeline_orchestrator.py
Deliverables/Deliverables R1_260610/Current_Stable_Codebase/app/services/proposal/: __init__.py
Deliverables/Deliverables R1_260610/Current_Stable_Codebase/app/services/simulation/: __init__.py
Deliverables/Deliverables R1_260610/Current_Stable_Codebase/tests/: test_data_validator.py  test_debug_mode.py  test_provider_interface.py  test_schema_manager.py  test_simulation_engine.py  test_yahoo_provider.py
Deliverables/Deliverables R1_260610/Current_Stable_Codebase/tools/: init_debug_db.py
(+1028 files in other folders)
