[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-ai-platform"
version = "0.1.0"
description = "Local Windows research-grade US daily swing trading analyzer (DuckDB + Polars, research-grade V1)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Stock AI Platform" }]
keywords = ["swing-trading", "duckdb", "polars", "research", "screening"]

# Runtime dependencies per CODING_STANDARDS.md section 3 (Required Libraries).
# Module 01 itself only needs python-dotenv; the rest are declared up front so
# the environment is provisioned for later modules without reopening config.
dependencies = [
    "duckdb>=1.0",
    "polars>=1.0",
    "yfinance>=0.2.40",
    "pandas-market-calendars>=4.4",
    "streamlit>=1.36",
    "pydantic>=2.7",
    "keyring>=25.0",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "docs*", "data*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
